<resources>
    <string name="app_name">Job Portal</string>
    <string name="jobCategoryTitle">Title</string>
    <string name="secondActivityTitle">Title</string>
    <string name="secondActivityDescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="secondActivityMainTitle">TITLE</string>
    <string name="thirdActivityDescHeading">Description</string>
    <string name="thirdActivityDescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        \n \n Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        \n \n Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        \n \n Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        \n \n Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        \n \n Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        \n \n Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        \n \n Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
    </string>
    <string name="enter_name">NAME</string>
    <string name="name">Enter your name</string>
    <string name="enter_contactno">CONTACT NO.</string>
    <string name="enter_email">EMAIL</string>
    <string name="enter_description">DESCRIPTION</string>
    <string name="contact_no">Enter your contact no</string>
    <string name="email">Enter your email</string>
    <string name="description">Enter your description</string>
    <string name="attach_file">ATTACH FILE</string>
    <string name="file_name">(File name).......</string>
    <string name="title">TITLE</string>
    <string name="Description">DESCRIPTION</string>
    <string name="email_1">EMAIL</string>
    <string name="category">CATEGORY</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_full_description">Enter your full description</string>
    <string name="full_description">FULL-DESCRIPTION</string>
    <string name="enter_your_job_post_title">Enter your job post title</string>
    <string name="name_1">NAME</string>
    <string name="enter_your_contact_no">Enter your contact no</string>
    <string name="post_job_contact_no">CONTACT NO</string>
    <string name="attach_images">ATTACH IMAGE/S</string>
    <string name="Images_name">(Image/s name).......</string>
</resources>
