<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background_2"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".post_activity">
    <com.daniyalfarid.jobportal.Fonts.SegoeUIBold
        android:id="@+id/applicationFormTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:text="@string/post_job"
        android:textSize="35sp" />

    <ScrollView
        android:layout_below="@+id/applicationFormTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical">

            <com.daniyalfarid.jobportal.Fonts.SegoeUIBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textSize="18sp" />


            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/categorySelection"
                android:layout_width="match_parent"
                android:layout_height="40dp">

            </android.support.v7.widget.AppCompatSpinner>




            <com.daniyalfarid.jobportal.Fonts.SegoeUIBold
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="18sp" />

            <EditText
                android:maxLength="32"
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#707070"
                android:hint="@string/enter_your_job_post_title"
                android:textColorHint="#9F9F9F" />

            <com.daniyalfarid.jobportal.Fonts.SegoeUIBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/Description"
                android:textSize="18sp" />

            <EditText
                android:maxLength="100"
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#707070"
                android:hint="@string/description"
                android:textColorHint="#9F9F9F" />

            <com.daniyalfarid.jobportal.Fonts.SegoeUIBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/full_description"
                android:textSize="18sp" />

            <EditText
                android:maxLength="350"
                android:id="@+id/full_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#707070"
                android:hint="@string/enter_your_full_description"
                android:textColorHint="#9F9F9F" />

            <com.daniyalfarid.jobportal.Fonts.SegoeUIBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/name_1"
                android:textSize="18sp" />

            <EditText
                android:maxLength="32"
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#707070"
                android:hint="@string/enter_your_name"
                android:textColorHint="#9F9F9F" />

            <com.daniyalfarid.jobportal.Fonts.SegoeUIBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/email_1"
                android:textSize="18sp" />

            <EditText
                android:inputType="textEmailAddress"
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#707070"
                android:hint="@string/enter_your_email_address"
                android:textColorHint="#9F9F9F" />

            <com.daniyalfarid.jobportal.Fonts.SegoeUIBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Contact.No"
                android:textSize="18sp" />

            <EditText
                android:maxLength="11"
                android:id="@+id/contactNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/enter_your_contact_no"
                android:inputType="phone" />

            <com.daniyalfarid.jobportal.Fonts.SegoeUIBold
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attach_file" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/addedFileName"
                    android:textStyle="italic"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/file_name"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageButton
                    android:src="@drawable/add_file_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:background="#00000000"
                    android:id="@+id/addJobFormAttachFile"/>
            </LinearLayout>


            <ImageButton
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginStart="8dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="30dp"
                android:background="#00000000"
                android:padding="0dp"
                app:srcCompat="@drawable/submit_button" />


        </LinearLayout>

    </ScrollView>


</RelativeLayout>