<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background_2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddJobActivity">

    <com.daniyalfarid.jobportal.Fonts.SegoeUIBold
        android:id="@+id/addJobTitle"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"/>

    <ScrollView
        android:layout_below="@+id/addJobTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_marginHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.daniyalfarid.jobportal.Fonts.SegoeUIBold
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_name" />

            <EditText
                android:maxLength="32"
                android:id="@+id/addJobFormName"
                android:textColorHint="#9F9F9F"
                android:hint="@string/name"
                android:backgroundTint="#707070"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.daniyalfarid.jobportal.Fonts.SegoeUIBold
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_contactno" />

            <EditText
                android:maxLength="11"
                android:inputType="phone"
                android:id="@+id/addJobFormcontactNo"
                android:textColorHint="#9F9F9F"
                android:hint="@string/contact_no"
                android:backgroundTint="#707070"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.daniyalfarid.jobportal.Fonts.SegoeUIBold
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_email" />

            <EditText
                android:inputType="textEmailAddress"
                android:id="@+id/addJobEmail"
                android:textColorHint="#9F9F9F"
                android:hint="@string/email"
                android:backgroundTint="#707070"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.daniyalfarid.jobportal.Fonts.SegoeUIBold
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attach_file" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/addedFileName"
                    android:textStyle="italic"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:text="@string/file_name"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageButton
                    android:src="@drawable/add_file_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="0dp"
                    android:background="#00000000"
                    android:id="@+id/addJobFormAttachFile"/>
            </LinearLayout>

            <RelativeLayout
                android:layout_marginStart="8dp"
                android:layout_marginTop="90dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/applicationFormSubmit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:padding="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.971"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.947"
                    app:srcCompat="@drawable/submit_button" />

                <com.daniyalfarid.jobportal.Fonts.SegoeUIBold
                    android:id="@+id/addJobButtonText"
                    android:textSize="12sp"
                    android:textColor="@color/common_google_signin_btn_text_dark_default"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>



            </RelativeLayout>



        </LinearLayout>

    </ScrollView>


</RelativeLayout>